# ai-operating-system

./: AGENTS.md  CONTRIBUTING.md  README.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workflow_improvement.md
.github/workflows/: ci.yml  release.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
brand_os/: __init__.py
brand_os/workflows/: __init__.py  content_draft.py
data/local_only/brand/: brand_week_15.md  brand_week_16.md
data/local_only/projects/: director_week_13.md  director_week_14.md  director_week_15.md
director_os/: __init__.py
director_os/workflows/: __init__.py  weekly_update.py
evaluations/brand_os/: content_draft_cases.json
evaluations/director_os/: weekly_update_cases.json
scripts/: run_brand_os_evals.py  run_director_os_evals.py
tests/: test_api.py  test_brand_content_draft.py  test_brand_os_evaluations.py  test_brand_os_graph.py  test_director_os_evaluations.py  test_director_os_graph.py  test_import_integrity.py  test_langsmith_observability.py  test_orchestrator.py  test_weekly_update.py
