[project]
name = "ai-operating-system"
version = "0.1.0"
description = "Local-first AI Operating System MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "brand_os",
  "brand_os.workflows",
  "director_os",
  "director_os.workflows",
  "packages",
  "packages.shared",
  "packages.shared.graphs",
  "packages.shared.orchestration",
  "packages.shared.providers",
  "packages.shared.retrieval",
  "packages.shared.schemas",
  "packages.shared.validation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
